updated day cards

--- a/index.html
+++ b/index.html
@@ -29,39 +29,34 @@
 
         <!--5 Day Forecast-->
         <div class="forecastCard">
-            <h3 class="cityDisplay">City</h3>
+            <h3 class="dyaDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
             <p class="skiesDisplay">sunny</p>
-            <p class="errorBox"> Error</p>
         </div>
         <div class="forecastCard">
-            <h3 class="cityDisplay">City</h3>
+            <h3 class="dyaDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
             <p class="skiesDisplay">sunny</p>
-            <p class="errorBox"> Error</p>
         </div>
         <div class="forecastCard">
-            <h3 class="cityDisplay">City</h3>
+            <h3 class="dyaDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
             <p class="skiesDisplay">sunny</p>
-            <p class="errorBox"> Error</p>
         </div>
         <div class="forecastCard">
-            <h3 class="cityDisplay">City</h3>
+            <h3 class="dyaDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
             <p class="skiesDisplay">sunny</p>
-            <p class="errorBox"> Error</p>
         </div>
         <div class="forecastCard">
-            <h3 class="cityDisplay">City</h3>
+            <h3 class="dyaDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
             <p class="skiesDisplay">sunny</p>
-            <p class="errorBox"> Error</p>
         </div>
 
     </div>
