--- a/index.html
+++ b/index.html
@@ -22,41 +22,40 @@
             <h3 class="cityDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
-            <p class="skiesDisplay">sunny</p>
-            <p class="errorBox"> Errror</p>
+            <p class="skyDisplay">sunny</p>
         </div>
 
 
         <!--5 Day Forecast-->
         <div class="forecastCard">
-            <h3 class="dyaDisplay">City</h3>
+            <h3 class="weekDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
-            <p class="skiesDisplay">sunny</p>
+            <p class="skyDisplay">sunny</p>
         </div>
         <div class="forecastCard">
-            <h3 class="dyaDisplay">City</h3>
+            <h3 class="weekDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
-            <p class="skiesDisplay">sunny</p>
+            <p class="skyDisplay">sunny</p>
         </div>
         <div class="forecastCard">
-            <h3 class="dyaDisplay">City</h3>
+            <h3 class="weekDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
-            <p class="skiesDisplay">sunny</p>
+            <p class="skyDisplay">sunny</p>
         </div>
         <div class="forecastCard">
-            <h3 class="dyaDisplay">City</h3>
+            <h3 class="weekDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
-            <p class="skiesDisplay">sunny</p>
+            <p class="skyDisplay">sunny</p>
         </div>
         <div class="forecastCard">
-            <h3 class="dyaDisplay">City</h3>
+            <h3 class="weekDisplay">City</h3>
             <p class="tempDisplay"> 90 F</p>
             <p class="humidDisplay">Humidity: 50%</p>
-            <p class="skiesDisplay">sunny</p>
+            <p class="skyDisplay">sunny</p>
         </div>
 
     </div>
