--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="container">
 
         <!--Weather Form-->
-        <form class="weatherForm">
+        <div class="weatherForm">
             <input type="text" class="cityInput" placeholder="Enter Your Location">
             <button id="search-button" class="fa-solid fa-magnifying-glass" type="submit"></button>
             
-        </form>
+        </div>
 
         
         <!--Current Weather-->
